# prompt-iqa

./: README.md  check_point_downloader.py  cleanup_env.sh  conda_env.yml  pyproject.toml  requirements.txt  setup_env.sh  test_runner.py
PromptIQA/: prompt_iqa_conf.yml  prompt_iqa_pipeline.py  run_promptIQA.py
