[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-iqa"
version = "0.0.0"
description = "PromptIQA: Boosting the Performance and Generalization for No-Reference Image Quality Assessment via Prompts"
authors = [
    {name="Zewen Chen", email="chencn2018@163.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/404-Repo/prompt-iqa/tree/integration_preparation"
Issues = "https://github.com/404-Repo/prompt-iqa/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true
packages = ["PromptIQA"]

[tool.setuptools.package-data]
'PromptIQA' = ['**/*.png', '**/*.jpg', '**/*.yml', '**/*.py', '**/*.tar']